dev/web-updated2.yaml
apiVersion: v1
kind: Service
metadata:
  name: webby
  labels:
    app: web
spec:
  ports:
    - port: 8200
      targetPort: 80
      name: web
  selector:
    app: web
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  labels:
    app: web
spec:
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: dockersamples/wordsmith-web
          ports:
            - containerPort: 80
              name: web
