dev/wordsmith-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: websvc
                port:
                  number: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: websvc
  labels:
    app: web
spec:
  ports:
    - port: 8080
      targetPort: 80
      name: web
  selector:
    app: web
  type: ClusterIP
